--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "devDependencies": {
     "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "vite": "^7.1.7"
   },
@@ -21,6 +21,7 @@
     "framer-motion": "^10.12.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3"
   }
 }
